// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`evaluate > Test error in expression and situation at same time 1`] = `
{
  "situationError": {
    "message": "
[ Erreur lors de la mise à jour de la situation ]
➡️  Dans la règle \\"test\\"
✖️  'test' n'existe pas dans la base de règle.",
  },
}
`;

exports[`evaluate > Test invalid syntax in situation 1`] = `
{
  "situationError": {
    "message": "
[ Erreur lors de la mise à jour de la situation ]
➡️  Dans la règle \\"test\\"
✖️  'test' n'existe pas dans la base de règle.",
  },
}
`;

exports[`evaluate > Test syntax error in expression 1`] = `
{
  "evaluate": [
    {
      "error": {
        "message": "
[ Erreur syntaxique ]
➡️  Dans la règle \\"$EVALUATION\\"
✖️  L'expression suivante n'est pas valide :
   
   1+1
    ^
   Les opérateurs doivent être entourés d’espaces (\\"2 + 2\\" et non \\"2+2\\")
",
      },
      "warnings": [],
    },
  ],
  "warnings": [],
}
`;

exports[`evaluate > Test two syntax error in expression 1`] = `
{
  "evaluate": [
    {
      "error": {
        "message": "
[ Erreur syntaxique ]
➡️  Dans la règle \\"$EVALUATION\\"
✖️  L'expression suivante n'est pas valide :
   
   1+1
    ^
   Les opérateurs doivent être entourés d’espaces (\\"2 + 2\\" et non \\"2+2\\")
",
      },
      "warnings": [],
    },
    {
      "error": {
        "message": "
[ Erreur syntaxique ]
➡️  Dans la règle \\"$EVALUATION\\"
✖️  L'expression suivante n'est pas valide :
   
   \\"42
   ^
   Une chaîne de caractères est attendu, mais \\"\\"42\\" a été trouvé
",
      },
      "warnings": [],
    },
    {
      "missingVariables": {},
      "nodeValue": 42,
      "unit": undefined,
    },
  ],
  "warnings": [],
}
`;
